Update to Spring-Boot 4.0.0-SNAPSHOT